--- a/yike-client/src/index.css
+++ b/yike-client/src/index.css
@@ -6,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #313131;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,7 +22,7 @@
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
