--- a/yike-client/src/index.css
+++ b/yike-client/src/index.css
@@ -5,8 +5,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: rgb(33, 33, 33);
+  /* color: rgba(243, 243, 243, 1);
+  background-color: rgba(35, 35, 35, 1); */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -49,10 +49,10 @@ body {
   height: 100vh;
   user-select: none;
 }
-
+/*
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: rgba(35, 35, 35, 1);
+    background-color: rgba(243, 243, 243, 1);
   }
-}
+} */
