--- a/yike-client/src/index.css
+++ b/yike-client/src/index.css
@@ -5,8 +5,9 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  /* color: rgba(243, 243, 243, 1);
-  background-color: rgba(35, 35, 35, 1); */
+
+  color: rgba(35, 35, 35, 1);
+  background-color: rgba(243, 243, 243, 1);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -49,10 +50,8 @@ body {
   height: 100vh;
   user-select: none;
 }
-/*
-@media (prefers-color-scheme: light) {
-  :root {
-    color: rgba(35, 35, 35, 1);
-    background-color: rgba(243, 243, 243, 1);
-  }
-} */
+
+.dark {
+  color: rgba(243, 243, 243, 1);
+  background-color: rgba(35, 35, 35, 1);
+}
